Feat: LIVE-4408 add market stake button (#2434)
* feat: add market stake buttons

* chore: add changeset

* fix: fix polkadot stake action

* fix: track drawer button before open modal - stake flow

* refactor: refactor useStakeFlow

* refactor: stake market button with new hook

* chore: remove destructuring stake programs flag

--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -1121,6 +1121,7 @@
       "receive": "Receive",
       "send": "Send",
       "swap": "Swap",
+      "stake": "Stake",
       "buy": "Buy",
       "sell": "Sell",
       "edit": "Edit account",
