✨ [FEAT] : LIVE-4909 - LLM- MultiSelect-Hide-NFTs (#2290)
* 🚧 WIP

* Add select on NFT with Amont

* 💄 Add opacity when selectable & selected

* ✨ SnackBar when action of hide is done

* ⚡ Improve behavior when leaving sreen

* ⚡ Add LongPress Action on NFT

* 🌐 Update Wordings

* Animated the bottom Tab Bar when unmounted and mounted

* 🚧 WIP

* Add select on NFT with Amont

* 💄 Add opacity when selectable & selected

* ✨ Multiples Improvments and SnackBar when action of hide is done (#2311)

* ✨ SnackBar when action of hide is done

* ⚡ Improve behavior when leaving sreen

* ⚡ Add LongPress Action on NFT

* 🌐 Update Wordings

* Animated the bottom Tab Bar when unmounted and mounted

* 🚧 WIP

* Add select on NFT with Amont

* 💄 Add opacity when selectable & selected

* ✨ Multiples Improvments and SnackBar when action of hide is done (#2311)

* ✨ SnackBar when action of hide is done

* ⚡ Improve behavior when leaving sreen

* ⚡ Add LongPress Action on NFT

* 🌐 Update Wordings

* Feat/llm multi select animations (#2348)

Animated the bottom Tab Bar when unmounted and mounted

* New header when in multiselect mode + animations associated

* New header in multi-select mode + associated animations

* Animated the bottom Tab Bar when unmounted and mounted

* New header when in multiselect mode + animations associated

* Update apps/ledger-live-mobile/src/locales/en/common.json

Co-authored-by: Martin CAYUELAS <112866305+mcayuelas-ledger@users.noreply.github.com>

* lint + color fix

* 📝 Changeset

* ⚡ Add animations

* 💄 Polish

* 🐛 Fix display

* 🐛 Fix blocker on Navigation

* 💄 Polish - 2

* 💄 Add gradient

* New close button in NFT Multiselect

* Cleanup NFTList (comments and imports)

* update footer CTA's design

* Updated footer style

* 💄 Little fixes

* 🐛 Fix display Alert

* 🛠  Review - Part 1

* ⚡ Add condition in Handler

* Removed count in hide CTA

* 🛠  Review

--- a/apps/ledger-live-mobile/src/locales/en/common.json
+++ b/apps/ledger-live-mobile/src/locales/en/common.json
@@ -5930,7 +5930,6 @@
       }
     }
   },
-
   "postOnboarding": {
     "hub": {
       "title": "Next up, use your {{productName}} to...",
@@ -5971,6 +5970,13 @@
       "nft": "NFTs"
     },
     "nftGallery": {
+      "filters": {
+        "selectAndHide": "Select and hide",
+        "hide": "Hide {{count}} collection",
+        "hide_plural": "Hide {{count}} collections",
+        "alertHide": "1 Collection hidden. Go to the settings to display and unhide it at any time",
+        "alertHide_plural": "{{count}} Collections hidden. Go to the settings to display and unhide them at any time"
+      },
       "empty": {
         "title": "No NFTs to show, yet",
         "subtitle": "Get started by receiving your first NFT.",
