fix(icp): finalize lld implementation

--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -4717,7 +4717,8 @@
     },
     "internet_computer": {
       "memoPlaceholder": "Optional, Default: 0",
-      "memo": "Memo"
+      "memo": "Memo",
+      "memoWarningText": "The value of memo can be a number between 0 and 9223372036854775807"
     },
     "stellar": {
       "memo": "Memo",
@@ -5157,6 +5158,9 @@
     },
     "InvalidAddressBecauseDestinationIsAlsoSource": {
       "title": "Recipient address is the same as the sender address"
+    },
+    "InvalidMemoICP": {
+      "title": "Memo is required to be a number"
     },
     "CantOpenDevice": {
       "title": "Sorry, connection failed",
