--- a/apps/ledger-live-mobile/src/locales/en/common.json
+++ b/apps/ledger-live-mobile/src/locales/en/common.json
@@ -3446,6 +3446,12 @@
       }
     }
   },
+  "editTransaction": {
+    "stuckTx": "It looks like your last transaction is stuck.",
+    "adjustFees": "Adjust Network Fees",
+    "speedupTxMessage": "Your transaction is ongoing. You can replace it with a new one.",
+    "speedUp": "Speed Up"
+  },
   "requestAccount": {
     "stepperHeader": {
       "selectCrypto": "Select crypto",
