File apps/ledger-live-desktop/static/i18n/en/app.json was translated to ru-RU locale

--- a/apps/ledger-live-desktop/static/i18n/ru/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ru/app.json
@@ -102,6 +102,7 @@
     "addressCopied" : "Адрес скопирован",
     "addressCopiedSuspicious" : "Скопированный адрес не совпадает с адресом в буфере обмена.",
     "experimentalFeature" : "Экспериментальный режим",
+    "featureFlags" : "Фича-флаги (Feature Flags)",
     "information" : "Информация",
     "search" : "Поиск...",
     "searchWithoutEllipsis" : "Поиск",
@@ -131,7 +132,7 @@
     "nanoS" : "Nano S",
     "nanoSP" : "Nano S Plus",
     "nanoX" : "Nano X",
-    "nanoFTS" : "Nano FTS",
+    "stax" : "Stax",
     "blue" : "Blue"
   },
   "operation" : {
@@ -217,7 +218,8 @@
     "swap" : "Обмен",
     "lend" : "Кредитование",
     "catalog" : "Исследуйте",
-    "market" : "Рынок"
+    "market" : "Рынок",
+    "protect" : "Protect"
   },
   "stars" : {
     "placeholder" : "Выделите счёт, чтобы он отобразился здесь.",
@@ -1206,8 +1208,11 @@
         "checkDeviceButton" : "Запустите проверку снова",
         "cancelButton" : "Не сейчас"
       },
-      "genuineCheckAnimationModal" : {
-        "message" : "Одобрите работу менеджера «Мой Ledger» на {{deviceName}}"
+      "softwareCheckAllowSecureChannelModal" : {
+        "title" : "Одобрите работу «Мой Ledger» на {{deviceName}}"
+      },
+      "softwareCheckLockedDeviceModal" : {
+        "title" : "Разблокируйте устройство"
       },
       "helpDrawer" : {
         "title" : "Нужна помощь по настройке устройства?",
@@ -1718,7 +1723,7 @@
     "swap" : {
       "notice" : {
         "default" : "Перед отправкой проверьте сведения об обмене на устройстве. Обмен адресами осуществляется безопасно и не требует проверки.",
-        "cic" : "Перед отправкой проверьте детали обмена на устройстве. CIC может дополнительно проверять некоторые транзакции, что приведёт к задержкам."
+        "provider" : "Перед отправкой проверьте детали обмена на устройстве. {{providerName}} может дополнительно проверять некоторые транзакции, что приведёт к задержкам."
       },
       "confirm" : "Подтвердить обмен",
       "amountSent" : "Сумма к отправке",
@@ -2052,7 +2057,7 @@
     "steps" : {
       "chooseAccount" : {
         "title" : "Счёт",
-        "label" : "Счёт для зачисления средств",
+        "label" : "Счёт для зачисления",
         "parentAccount" : "1. Выберите счёт {{currencyName}}",
         "token" : "2. Выберите токен",
         "verifyTokenType" : "Проверьте, чтобы <0>{{token}}</0> был токеном <0>{{tokenType}}</0>. Любой другой криптоактив, отправленный на счёт {{currency}}, может быть потерян.",
@@ -3395,8 +3400,8 @@
     "stake" : {
       "title" : "Приумножайте ETH",
       "lido" : {
-        "tag" : "Без минимальной суммы",
-        "description" : "Застейкайте эфиры (ETH) через Lido и получайте ежедневные вознаграждения. Причём без периода блокировки и минимальной суммы."
+        "tag" : "Без мин. суммы",
+        "description" : "Стейкайте ETH в Lido и получайте вознаграждения. Без периода блокировки и минимальной суммы."
       },
       "kiln" : {
         "tag" : "От 32 ETH",
@@ -3689,8 +3694,10 @@
       "debugAppsDesc" : "Показывать и открывать отладочные приложения на платформе.",
       "experimentalApps" : "Разрешить экспериментальные приложения",
       "experimentalAppsDesc" : "Показывать и открывать экспериментальные приложения на платформе.",
-      "catalogServer" : "Выбрать поставщика приложений",
-      "catalogServerDesc" : "Переключение между несколькими источниками приложений",
+      "catalogUrl" : "Выберите оператора Каталога приложений",
+      "catalogUrlDesc" : "Введите собственный URL поставщика каталога",
+      "catalogRampServer" : "Выберите оператора услуг покупки/продажи криптоактивов",
+      "catalogRampServerDesc" : "Переключайтесь между несколькими операторами услуг обмена",
       "enablePlatformDevTools" : "Включить инструменты разработчика на платформе",
       "enablePlatformDevToolsDesc" : "Разрешить открывать окно инструментов разработчика на платформе",
       "featureFlagsTitle" : "Определённые фича-флаги (feature flags), используемые в Ledger Live",
@@ -3698,6 +3705,9 @@
       "featureFlagsEdit" : "Редактировать",
       "featureFlagsRestore" : "Восстановить",
       "featureFlagsOverride" : "Переопределить",
+      "featureFlagsRestoreAll" : "Восстановить все значения флагов",
+      "showButtonDesc" : "Всегда показывать кнопку Фича-флагов на боковой панели",
+      "buttonTitle" : "Локально переопределённые флаги",
       "firebaseProject" : "Проект Firebase является целевым для этой сборки:",
       "addLocalApp" : "Добавить локальное приложение",
       "addLocalAppDesc" : "Загрузка локального приложения в формате локального манифеста",
@@ -3756,6 +3766,10 @@
         "experimentalCurrencies" : {
           "title" : "Экспериментальная интеграция",
           "description" : "Использовать доступные экспериментальные интеграции криптовалют."
+        },
+        "experimentalExecutionOnRenderer" : {
+          "title" : "Экспериментальная сеть",
+          "description" : "Используйте экспериментальную сеть для оптимизации взаимодействия с Ledger Live через VPN. Активируйте функцию только в случае возникновения системных ошибок при использовании VPN."
         },
         "experimentalLanguages" : {
           "title" : "Тестирование перевода",
@@ -5254,7 +5268,7 @@
       "title" : "Сумма для разморозки не может быть меньше 1"
     },
     "TronSendTrc20ToNewAccountForbidden" : {
-      "title" : "Чтобы активировать приём токенов TRC-20, на этот адрес начала нужно отправить не менее 0,1 TRX.",
+      "title" : "Чтобы активировать приём токенов TRC-20, на этот адрес сначала нужно отправить минимум 0,1 TRX.",
       "description" : "Счёт получателя нужно активировать перед отправкой на него токенов TRC-20. Чтобы активировать его, отправьте на него токены TRX или TRC-10."
     },
     "TronUnexpectedFees" : {
@@ -5497,6 +5511,14 @@
       "title" : "Устройство заблокировано",
       "description" : "Разблокируйте устройство и повторите попытку.",
       "descriptionWithProductName" : "Разблокируйте {{ productName }} и повторите попытку."
+    },
+    "DeviceNotOnboardedError" : {
+      "title" : "Устройство не готово",
+      "titleWithProductName" : "Устройство {{ productName }} не готово",
+      "description" : "Сначала устройство нужно настроить.\nМы поможем вам с этим.",
+      "descriptionWithProductName" : "Сначала {{ productName }} необходимо настроить.\nМы поможем вам с этим.",
+      "goToOnboardingButton" : "Настроить устройство",
+      "goToOnboardingButtonWithProductName" : "Настроить {{ productName }}"
     }
   },
   "cryptoOrg" : {
@@ -5559,10 +5581,16 @@
     "postOnboarding" : {
       "title" : "Персонализируйте устройство",
       "description" : "Благодаря гибким настройкам экрана",
-      "actionCompletedPopupLabel" : "Устройство персонализировано",
-      "actionCompletedHubTitle" : "Ваш экран выглядит восхитительно!"
+      "actionCompletedPopupLabel" : "Устройство персонализировано"
     },
     "customImageSet" : "Пользовательское изображение установлено",
     "finishCTA" : "Завершить"
+  },
+  "discoverProtect" : {
+    "new" : "Новое",
+    "title" : "Сохраните доступ к криптоактивам с помощью Protect. В любых обстоятельствах.",
+    "description" : "Protect оберегает вашу фразу восстановления. А значит, предотвращает потерю криптоактивов из-за кражи или утраты фразы восстановления, а также устройства Ledger.",
+    "cta" : "Подробнее",
+    "downloadLLM" : "Сканируйте QR-код и загрузите мобильное приложение, чтобы оформить подписку"
   }
 }
